# little-go-guide

./: .markdownlintignore  .tool-versions  Makefile  README.md  go.work  package-lock.json  package.json  prettier.config.mjs  pyproject.toml
.github/linters/: markdownlint.yml  yamllint.yml
.github/workflows/: static-checks-go.yml
common-tooling/: README.md
project-organization/: README.md
using-generics/: README.md
using-interfaces/: README.md
using-interfaces/example/: go.mod  main.go
writing-unit-tests/: README.md
