[tool.poetry]
name = "Practical Go"
version = "0.1.0"
description = "Helpful guidelines for programming with Go"
authors = ["Jacob Wan <jacobwan840@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
yamllint = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
